# DeepFakeGuard

./: .gitignore  BENCHMARK_GUIDE.md  BENCHMARK_REALITY_CHECK.md  BENCHMARK_STATUS.md  CITATION.cff  CONTRIBUTING.md  DETECTOR_ANALYSIS.md  DeepfakeGuard_Paper.tex  DeepfakeVidDetection_ONEPAGE.tex  LICENSE  MANIFEST.in  README.md  _test_lipfd.py  benchmark_celebdf.py  benchmark_detectors.py  benchmark_for_paper.py  benchmark_real.py  benchmark_real_ff.py  benchmark_report.json  benchmark_results.json  benchmark_results_quick.json  benchmark_results_real.json  benchmark_results_table.tex  download_benchmark_data.py  download_faceforensics.py  download_samples.py  fix_encoding.py  pyproject.toml  quick_benchmark.py  references.bib  requirements.txt  run_benchmark.py  setup_celebdf.py  setup_faceforensics.py  setup_kaggle.py  setup_kaggle_mcp.sh  test_all_detectors.py  test_all_detectors_final.py  test_detectors.py  test_dinov3.py  (+5 more)
app/: main.py
benchmark_data/: README.txt  labels.csv
benchmark_data/faceforensics/manipulated_sequences/Deepfakes/c23/videos/: tmp2fyhky4y
benchmark_data/faceforensics/original_sequences/youtube/c23/videos/: tmpgegti8z2
src/deepfake_guard/: __init__.py  core.py  types.py
src/deepfake_guard/explainability/: __init__.py  grid.py  prompts.py  vlm_explainer.py
src/deepfake_guard/models/: __init__.py
src/deepfake_guard/models/d3/: __init__.py  detector.py
src/deepfake_guard/models/dinov3/: __init__.py  classifier_head.py  detector.py  frame_encoder.py
src/deepfake_guard/models/ivyfake/: __init__.py  detector.py  multiscale_detector.py
src/deepfake_guard/models/lipfd/: __init__.py  detector.py  model.py  preprocessing.py  region_awareness.py
src/deepfake_guard/models/resnet18/: __init__.py  detector.py
src/deepfake_guard/utils/: __init__.py  face_crop.py  identity.py  preprocess.py  video_io.py  weights.py
ui/: demo_frontend.py  enhanced_gui.py
