[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfake_guard"
version = "0.1.0"
description = "Multimodal Deepfake Detection Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "timm>=0.9.0",
    "facenet-pytorch",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8"
]
ui = [
    "streamlit",
    "requests"
]
api = [
    "fastapi",
    "uvicorn",
    "python-multipart"
]

[tool.setuptools.packages.find]
where = ["src"]
